# UnifiedQuantum

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  stubgen.py
.github/workflows/: build_and_test.yml  docs.yml  pypi-publish.yml  pytest_coverage.yml  python_build_wheel.yml
UniqCpp/Pybinder/: CMakeLists.txt  uniq_cpp.cpp
UniqCpp/src/: CMakeLists.txt
UniqCpp/test/: CMakeLists.txt
UniqcCpp/Pybinder/: CMakeLists.txt  uniqc_cpp.cpp
docs/: Makefile  conf.py  index.rst
docs/source/: advanced.rst  algorithm.rst  cli.rst  guide.rst  releases.rst  uniq.algorithmics.ansatz.rst  uniq.algorithmics.circuits.rst  uniq.algorithmics.measurement.rst  uniq.algorithmics.rst  uniq.algorithmics.state_preparation.rst  uniq.analyzer.rst  uniq.backend.rst  uniq.circuit_adapter.rst  uniq.circuit_builder.named_circuit.rst  uniq.circuit_builder.parameter.rst  uniq.circuit_builder.qubit.rst  uniq.circuit_builder.rst  uniq.config.rst  uniq.exceptions.rst  uniq.network_utils.rst  uniq.originir.rst  uniq.pytorch.rst  uniq.qasm.rst  uniq.rst  uniq.simulator.rst  uniq.task.adapters.rst  uniq.task.config.rst  uniq.task.normalizers.rst  uniq.task.result_types.rst  uniq.task.rst  uniq.task_manager.rst  uniq.test.rst  uniq_api.rst  (+1 more)
examples/: README.md
scripts/: check_wheel_abi.py  generate_release_notes.py
uniq/: __init__.py  __main__.py  _version.py  backend.py  circuit_adapter.py  config.py  exceptions.py  network_utils.py  task_manager.py  version.py
uniqc/: circuit_adapter.py  task_manager.py
(+194 files in other folders)
